# libpgp

./: CMakeLists.txt
cmake/: headers_fixup.h
src/: estream-printf.c  estream.c  gpg-error.c  mkheader.c  w32-estream.c
